# TMDC_Program

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  data  pyproject.toml  requirements.txt
angle_cnn/: .gitignore  README.md  analyze_fft_failure.py  check_regression.py  dataset_generator.py  distortion_sweep.py  eval_compare.py  export_thesis_table.py  generate_thesis_figures.py  graded_eval.py  inference_real_data.py  moire_pipeline.py  preprocess_afm_data.py  robustness_sweep.py  train_cnn.py  train_cnn_v2.py
angle_cnn/core/: __init__.py  augment.py  cnn.py  config.py  degrade.py  dual_stream.py  eval_fft.py  eval_utils.py  fonts.py  io_afm.py  io_utils.py  metrics.py  moire_sim.py  physics.py  seed.py  train_utils.py
angle_cnn/docs/: afm_experiment_requirements.md  experiment_record_template.md  literature_image_benchmark.md  sim_to_real_roadmap.md
angle_cnn/docs/figures/literature/: README.md  image_sources.json
angle_cnn/outputs/: compare_report.txt  train_log.csv
angle_cnn/tests/: test_core.py  test_degrade.py  test_io_utils.py  test_metrics.py  test_moire_sim.py  test_physics.py  test_train_utils.py
thesis/hust_bachelor_cse/: HustGraduPaper.cls  gbt7714-2005.bst  thesis.tex
thesis/hust_bachelor_cse/Bibs/: mybib.bib
